@@ -93,6 +93,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 508778  syscall-wrapper waitid warns about infop=null
 508779  PRE(sys_prlimit64): reorder check for memory validity
 508869  x86-linux: simplify scalar test output
+508958  FreeBSD: add getgroups and setgroups wrappers
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
